kustomizations/journal/downloads/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: journal-downloads-web
  annotations:
    service.kubernetes.io/topology-mode: Auto
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
