kustomizations/journal/downloads/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journal-downloads-web
  annotations:
    external-dns.alpha.kubernetes.io/controller: "disabled"
    cert-manager.io/cluster-issuer: "${cert_manager_issuer}"
spec:
  ingressClassName: traefik
  rules:
  - host: ${hostname}
    http:
      paths:
      - path: /download
        pathType: ImplementationSpecific
        backend:
          service:
            name: journal-downloads-web
            port:
              number: 3000
  tls:
  - hosts:
    - ${hostname}
    secretName: ${hostname}-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journal-downloads-web-traefik
  annotations:
    cert-manager.io/cluster-issuer: "${cert_manager_issuer}"
spec:
  ingressClassName: traefik
  rules:
  - host: ${hostname}
    http:
      paths:
      - path: /download
        pathType: ImplementationSpecific
        backend:
          service:
            name: journal-downloads-web
            port:
              number: 3000
  tls:
  - hosts:
    - ${hostname}
    secretName: ${hostname}-tls
